src/test/ui/rfc-2093-infer-outlives/explicit-enum.stderr
error: rustc_outlives
  --> $DIR/explicit-enum.rs:14:1
   |
LL | / enum Foo<'a, U> { //~ ERROR 14:1: 16:2: rustc_outlives
LL | |     One(Bar<'a, U>)
LL | | }
   | |_^
   |
   = note: U : 'a

error: aborting due to previous error

